# jvmind-ce

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: release.yml  tests.yml
_tests/: README-tests.md  conftest.py  jdk8_g1_sample.txt  manual_verify_pra.py  sample_jstack.txt  test_agent_run.py  test_content_filter.py  test_fact_relevance.py  test_function_calling.py  test_gc_analyzer.py  test_gc_api.py  test_gc_matrix.py  test_health.py  test_i18n_messages.py  test_jdk11_zgc_system_gc.py  test_jstack_api.py  test_parallel_tools.py  test_progress_queue.py  test_prompts_signature.py  test_query_gc_events.py  test_sse_adapter_tool_events.py  test_state_lrudict.py  test_summarizer.py  test_token_budget.py  test_upload_storage_path_traversal.py  test_uploaded_db_only.py
app/: cli.py  frontend.py  schemas.py
app/core/: helpers.py  state.py
app/routes/: auth.py  chat.py  config.py  feedback.py  gc_reports.py  health.py  heapdump_proxy.py  heapdump_reports.py  heapdump_upload.py  jstack_reports.py  plans.py  sessions.py  settings.py  skills.py
app/services/: analysis_prompts.py  audit.py
docs/: RELEASING.md
frontend/: index.html  package-lock.json  package.json  report.html  vite.config.js  vitest.config.js
frontend/i18n/: en.json  i18n-consistency.test.js  i18n.test.js  index.js  zh.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: api.js  api.test.js  app.js  blog.js  charts.js  charts.test.js  config-dialog.js  config-dialog.test.js  feedback-widget.js  feedback-widget.test.js  gc-analysis.js  (+21 more)
react_agent/: __init__.py  config.py  content_filter.py  db.py  gc_analyzer.py  gc_analyzer_jdk8.py  i18n.py  jstack_analyzer.py  jvm_flags.py  mat_tools.py  memory_db.py  models.py  prompts.py  skill_manager_db.py  summarizer.py  timeutil.py  tools.py  upload_storage.py  user_manager_db.py
scripts/: install_mat.sh
(+75 files in other folders)
