[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jvmind-ce"
version = "0.1.0"
description = "JVMind Community Edition — JVM diagnostics AI agent (GC logs, jstack, heapdump analysis)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "JVMind Contributors" }]
keywords = ["jvm", "gc", "jstack", "heapdump", "diagnostics", "ai", "react-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0",
    "starlette>=0.27.0",
    "markdown>=3.0",
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.3,<1.0",
    "tiktoken>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "fonttools>=4.0",
    "brotli>=1.1",
]

[project.scripts]
jvmind = "app.cli:main"
jvmind-worker = "react_agent.heapdump_worker.__main__:main"

[project.urls]
Homepage = "https://github.com/jvmind/jvmind-ce"
Repository = "https://github.com/jvmind/jvmind-ce"
Issues = "https://github.com/jvmind/jvmind-ce/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["react_agent*", "app*"]

[tool.setuptools.package-data]
"app" = ["frontend/*", "frontend/**/*"]

[tool.pytest.ini_options]
testpaths = ["_tests"]
addopts = "-v --tb=short"
markers = [
    "db: SQLite-backed tests",
    "slow: slow tests",
]